07/16/2008
----------
* rewrote the entire plugin (it should actually work now)