@@ -1,94 +1,126 @@
 require File.dirname(__FILE__) + '/../../../../test/test_helper'
-require File.dirname(__FILE__) + '/../init.rb'
-
-class FakeController < ActionController::Base
-
-  def fake_action1
-    render :text => ''
-  end
-
-  def fake_action2
-    render :text => ''
-  end
-
-  def fake_action3
-    render :text => ''
-  end
-  
-  protected
-
-  def rescue_action(e)
-    raise e
-  end
-
-end
 
 class HelpersTest < Test::Unit::TestCase
-
-  def setup
-    class << FakeController
-      attr_accessor :pp_protected, :pp_accessible
-    end
-    FakeController.pp_protected  = []
-    FakeController.pp_accessible = []
-    @controller = FakeController.new
-    @request    = ActionController::TestRequest.new
-    @response   = ActionController::TestResponse.new
+  
+  # a little aliasing so I don't have to type so much.
+  Helpers = Cjbottaro::ParamProtected::Helpers
+  
+  def test_normalize_params
+    params = Helpers.normalize_params(:something)
+    assert_equal({"something" => nil}, params)
+    
+    params = Helpers.normalize_params([:something, :else])
+    assert_equal({"something" => nil, "else" => nil}, params)
+    
+    params = Helpers.normalize_params(:something => [:stuff, :blah])
+    assert_equal({"something" => {"stuff" => nil, "blah" => nil}}, params)
+    
+    params = Helpers.normalize_params(:something => [:stuff, {:blah => :bleck}])
+    assert_equal({"something" => {"stuff" => nil, "blah" => {"bleck" => nil}}}, params)
   end
   
-  def test_the_xpathy_thing
-    params = {
-      :scalar => 'test',
-      :user => { :name => { :fname => 'chris', :lname => 'bottaro'},
-                 :id   => 1 },
-      :pets => [ {:fname => 'calia', :mname => 'rose'},
-                 {:fname => 'coco',  :mname => 'rae' } ]              
-    }
-    expected_xpathy_thing = {
-      'scalar' => [[params, :scalar]],
-      'user' => [[params, :user]],
-      'user/name' => [[params[:user], :name]],
-      'user/name/fname' => [[params[:user][:name], :fname]],
-      'user/name/lname' => [[params[:user][:name], :lname]],
-      'user/id' => [[params[:user], :id]],
-      'pets' => [[params, :pets]],
-      'pets/fname' => [[params[:pets][0], :fname], [params[:pets][1], :fname]],
-      'pets/mname' => [[params[:pets][0], :mname], [params[:pets][1], :mname]]
-    }
-    xpathy_thing = Cjbottaro::ParamProtected::Helpers.params_by_path(params)
-    assert_equal expected_xpathy_thing, xpathy_thing
-  end
-
-  def test_accessible_map
-    expected_map = []
+  def test_normalize_actions
+    actions = Helpers.normalize_actions(nil)
+    assert_equal [:except, nil], actions
     
-    FakeController.param_accessible :user_id
-    expected_map << [['user_id'], [:except]]
-    assert_equal expected_map, FakeController.pp_accessible
+    actions = Helpers.normalize_actions(:only => :blah)
+    assert_equal [:only, "blah"], actions
     
-    FakeController.param_accessible :client_id
-    expected_map << [['client_id'], [:except]]
-    assert_equal expected_map, FakeController.pp_accessible
+    actions = Helpers.normalize_actions(:only => [:blah, :bleck])
+    assert_equal [:only, "blah", "bleck"], actions
     
-    FakeController.param_accessible :account_id, :only => :fake_action1
-    expected_map << [['account_id'], [:only, 'fake_action1']]
-    assert_equal expected_map, FakeController.pp_accessible
+    actions = Helpers.normalize_actions(:except => :blah)
+    assert_equal [:except, "blah"], actions
     
-    FakeController.param_accessible :account_id, :except => :fake_action1
-    expected_map << [['account_id'], [:except, 'fake_action1']]
-    assert_equal expected_map, FakeController.pp_accessible
+    actions = Helpers.normalize_actions(:except => [:blah, :bleck])
+    assert_equal [:except, "blah", "bleck"], actions
+    
+    assert_raises(ArgumentError){ Helpers.normalize_actions(:onlyy => :blah) }
+    assert_raises(ArgumentError){ Helpers.normalize_actions(:blah) }
+    assert_raises(ArgumentError){ Helpers.normalize_actions(:only => :something, :except => :something) }
   end
   
-  def test_accessible_map_with_arrays
-    expected_map = []
+  def test_action_matches
+    assert  Helpers.action_matches?(:only, ["blah", "bleck"], "blah")
+    assert  Helpers.action_matches?(:only, ["blah", "bleck"], "bleck")
+    assert !Helpers.action_matches?(:only, ["blah", "bleck"], "not")
     
-    FakeController.param_accessible [:user_id, :client_id], :only => [:fake_action1, :fake_action2]
-    expected_map << [['user_id', 'client_id'], [:only, 'fake_action1', 'fake_action2']]
-    assert_equal expected_map, FakeController.pp_accessible
+    assert !Helpers.action_matches?(:except, ["blah", "bleck"], "blah")
+    assert !Helpers.action_matches?(:except, ["blah", "bleck"], "bleck")
+    assert  Helpers.action_matches?(:except, ["blah", "bleck"], "not")
     
-    FakeController.param_accessible [:user_id, :client_id], :except => [:fake_action1, :fake_action2]
-    expected_map << [['user_id', 'client_id'], [:except, 'fake_action1', 'fake_action2']]
-    assert_equal expected_map, FakeController.pp_accessible
+    assert_raises(ArgumentError){ Helpers.action_matches?(:bad_scope, ["blah", "bleck"], "not") }
   end
-
+  
+  def test_do_param_accessible
+    
+    accessible_params = { :account_id => nil,
+                          :user_id => nil }
+    params            = { :account_id => 123,
+                          :user_id => 456,
+                          :profile_id => 789 }
+    expected_results  = { :account_id => 123,
+                          :user_id => 456 }
+    assert_equal expected_results, Helpers.do_param_accessible(accessible_params, params)
+    
+    accessible_params = { :account_id => nil,
+                          :user => nil }
+    params            = { :account_id => 123,
+                          :user => { :first_name => "christopher", :last_name => "bottaro" },
+                          :profile_ids => [789, 987] }
+    expected_results  = { :account_id => 123,
+                          :user => { :first_name => "christopher", :last_name => "bottaro"} }
+    assert_equal expected_results, Helpers.do_param_accessible(accessible_params, params)
+    
+    accessible_params = { :account_id => nil,
+                          :user => {:first_name => nil, :last_name => nil} }
+    params            = { :account_id => 123,
+                          :user => { :first_name => "christopher", :last_name => "bottaro", :middle_name => "james" },
+                          :profile_ids => [789, 987] }
+    expected_results  = { :account_id => 123,
+                          :user => { :first_name => "christopher", :last_name => "bottaro"} }
+    assert_equal expected_results, Helpers.do_param_accessible(accessible_params, params)
+    
+    accessible_params = { :account_id => nil,
+                          :user => {:name => {:first => nil, :last => nil}} }
+    params            = { :account_id => 123,
+                          :user => { :city => "Austin",
+                                     :name => {:first => "christopher", :last => "bottaro", :middle => "james"} },
+                          :profile_ids => [789, 987] }
+    expected_results  = { :account_id => 123,
+                          :user => { :name => {:first => "christopher", :last => "bottaro"} } }
+    assert_equal expected_results, Helpers.do_param_accessible(accessible_params, params)
+  end
+  
+  def test_do_param_protected
+    
+    protected_params  = { :account_id => nil,
+                          :user => nil }
+    params            = { :account_id => 123,
+                          :user => { :first_name => "christopher", :last_name => "bottaro" },
+                          :profile_ids => [789, 987] }
+    expected_results  = { :profile_ids => [789, 987] }
+    assert_equal expected_results, Helpers.do_param_protected(protected_params, params)
+    
+    protected_params  = { :account_id => nil,
+                          :user => {:middle_name => nil} }
+    params            = { :account_id => 123,
+                          :user => { :first_name => "christopher", :last_name => "bottaro", :middle_name => "james" },
+                          :profile_ids => [789, 987] }
+    expected_results  = { :user => {:first_name => "christopher", :last_name => "bottaro"},
+                          :profile_ids => [789, 987] }
+    assert_equal expected_results, Helpers.do_param_protected(protected_params, params)
+    
+    protected_params  = { :account_id => nil,
+                          :user => {:name => {:middle => nil}} }
+    params            = { :account_id => 123,
+                          :user => { :city => "Austin",
+                                     :name => {:first => "christopher", :last => "bottaro", :middle => "james"} },
+                          :profile_ids => [789, 987] }
+    expected_results  = { :profile_ids => [789, 987],
+                          :user => { :city => "Austin",
+                          :name => {:first => "christopher", :last => "bottaro"} } }
+    assert_equal expected_results, Helpers.do_param_protected(protected_params, params)
+  end
+  
 end
